# Attributor

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README.ru.md  package.json  plan_en.mermaid  plan_ru.mermaid  pnpm-lock.yaml  svelte.config.js  vite.config.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: build.yml  prerelease.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
docs/: SQLite.puml  application-architecture.puml  feature-classify-state-machine.puml  feature-deferred-metadata-cache.puml  thumbnail-pipeline.puml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: keywords.txt
src-tauri/src/: events.rs  exif.rs  filetree.rs  folder_processor.rs  keywords.rs  lib.rs  main.rs  metadata.rs  photo_processor.rs  types.rs  update.rs  xmp.rs
src-tauri/src/batch/: mod.rs
src-tauri/src/csv/: cell.rs  mod.rs  writer.rs
src-tauri/src/folder/: mod.rs  pipeline.rs  scan.rs  watch.rs
src-tauri/src/ollama/: attribute.rs  client.rs  mod.rs  types.rs
src-tauri/src/photo/: decode.rs  mod.rs  read.rs  thumbnail.rs  write.rs  xmp.rs
src-tauri/src/store/: fingerprint.rs  mod.rs  record.rs  schema.rs
src-tauri/tests/: batch_test.rs  bench_xmp.rs  folder_test.rs  metadata_test.rs  thumbnail_test.rs  xmp_read.rs
static/: Help.en.md  Help.md  Help.ru.md
(+161 files in other folders)
