[package]
name = "attributor"
version = "0.3.1"
description = ""
authors = ["Ars_Mond"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "attributor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-prevent-default = { version = "4.0.4", features = ["platform-windows"]}
img-parts = "0.4.0"
quick-xml = "0.39.2"
bytes = "1"
tauri-plugin-log = "2.8.0"
log = "0.4.29"
notify = "6"
tokio = { version = "1", features = ["sync"] }
nucleo-matcher = "0.3.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
little_exif = { git = "https://github.com/Ars-Mond/little_exif.git" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_xmp"
path = "tests/bench_xmp.rs"
harness = false

